package com.gerald.abstractdocument.domain;

import com.gerald.abstractdocument.AbstractDocument;

/**
 * @author Gerald_Yang.
 */
public class Car extends AbstractDocument{
}
