package com.gerald.abstractdocument.domain;

/**
 * @author Gerald_Yang.
 */
public interface HasPrice {
}
